--- a/PetstoreAPI/api.yaml
+++ b/PetstoreAPI/api.yaml
@@ -5,7 +5,7 @@ data:
   context: /v1
   version: 1.0.0
   provider: admin
-  lifeCycleStatus: CREATED
+  lifeCycleStatus: PUBLISHED
   isRevision: false
   revisionId: 0
   type: HTTP
