--- a/PetstoreAPI/api.yaml
+++ b/PetstoreAPI/api.yaml
@@ -18,8 +18,8 @@ data:
   endpointConfig:
     endpoint_type: http
     production_endpoints:
-      url: http://localhost:8080
+      url: http://localhost1:8080
     sandbox_endpoints:
-      url: http://localhost:8081
+      url: http://localhost1:8081
   endpointImplementationType: ENDPOINT
   websubSubscriptionConfiguration: null
