--- a/pickmeAPI-v1/api.yaml
+++ b/pickmeAPI-v1/api.yaml
@@ -5,7 +5,7 @@ data:
   context: /pickmeAPI
   version: v1
   provider: admin
-  lifeCycleStatus: CREATED
+  lifeCycleStatus: PUBLISHED
   isDefaultVersion: true
   isRevision: false
   revisionId: 0
